CR-2002-05-28-0: Testsuite: test new qrsh options -h and -hold_jid
                 Issue:     #66

JG-2002-05-28-0: Cleanup:   common function calls to create the active job 
                            directories in execd. 
                            Replace static buffers for building paths by 
                            dynamic strings (dstring).
                            Handle KEEP_ACTIVE with restarted jobs.
                 Issues:    #254, #261           

AH-2002-05-28-1: Bugfix:    Fix messages printed when GDI client fails contacting 
                            qmaster

JG-2002-05-27-0: Bugfix:    qsh ignored -S <shell> in sge_request(5) files
                 Issue:     #250
                 Bugtraq:   #4682966

AA-2002-05-27-0: I18N.:     I18N/L10N changes

CR-2002-05-24-1: Enhancem.: merged L10N Changes for install scripts from
                            V53_beta2_BRANCH

CR-2002-05-24-0: Bugfix:    - removed unused variable in infotext.c

JG-2002-05-24-0: Bugfix:    qalter -verify failed.

CR-2002-05-23-0: Enhancem.: - added infotext_msg_parse.tcl
                            - merge of infotext changes in V53_beta2_BRANCH

JG-2002-05-23-1: Bugfix:    qlogin jobs made execd crash.

JG-2002-05-23-0: Cleanup:   Made behaviour of sge_dstring_sprintf conformable 
                            to sprintf. 
                            New functions sge_dstring_sprintf_append 
                            (old behaviour of sge_dstring_sprintf) 
                            and sge_dstring_clear.

JG-2002-05-22-1: Cleanup:   Use a common function call to build paths in a jobs
                            active_jobs directory.
                            Use a common function call to output 
                            job/jatask/petask ids.
                 Issues:    #254, #258

JG-2002-05-22-0: Doc:       Fixed description of the environment variable 
                            SGE_TASK_ID for non array jobs in submit man page.
