@@ -1,3 +1,7 @@
+JG-2002-05-29-0: Cleanup:   use of library functions, typos,
+                            improved job_get_id_string()
+                 Issue:     #258           
+
 CR-2002-05-28-0: Testsuite: test new qrsh options -h and -hold_jid
                  Issue:     #66
 
